src/styles/components/Modal.scss
@use "../settings/sizing.scss";
@use "../settings/timing.scss";

@keyframes spin {
    from { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    height: 100svh;
    width: 100%;
    background: rgba(#000, 0.5);
    justify-content: center;
    align-items: center;
    display: flex;
    visibility: hidden;
    pointer-events: none;
    opacity: 0;
    transition: opacity timing.$anim-time, visibility timing.$anim-time;
    text-align: left;

    &.show {
        visibility: visible;
        pointer-events: auto;
        opacity: 1;
    }

    .modal-window {
        background-color: #fff;
        padding: 1.5rem;
        width: 55rem;

        @media only screen and (max-width: sizing.$mobile-width-threshold) {
            max-width: calc(100% - 2rem);
        }

        .modal-header {
            position: relative;
            margin-bottom: sizing.$item-spacing;

            &:last-child {
                margin-bottom: 0;
            }

            .modal-close {
                border: none;
                outline: none;
                position: absolute;
                background: none;
                top: 0;
                right: 0;

                &:hover {
                    animation: spin 0.5s infinite;
                }
            }
        }
    }
}

